@@ -6,6 +6,8 @@ build_requires:
   CSS::Struct::Output::Raw: 0
   CSS::Struct::Output::Structure: 0
   Data::Message::Simple: 0
+  English: 0
+  Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.59
   Tags::Output::Raw: 0
   Tags::Output::Structure: 0
