@@ -30,6 +30,8 @@ resources 'repository' => 'git://github.com/michal-josef-spacek/Tags-HTML-Change
 test_requires 'CSS::Struct::Output::Raw' => 0;
 test_requires 'CSS::Struct::Output::Structure' => 0;
 test_requires 'Data::Message::Simple' => 0;
+test_requires 'English' => 0;
+test_requires 'Error::Pure::Utils' => 0;
 test_requires 'Tags::Output::Raw' => 0;
 test_requires 'Tags::Output::Structure' => 0;
 test_requires 'Test::MockObject' => 0;
